--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "react-dom": "^16.3.1",
     "react-masonry-component": "^6.0.2",
     "react-masonry-infinite": "^1.2.2",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
