--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "material-ui": "^1.0.0-beta.41",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-masonry-component": "^6.0.2",
-    "react-masonry-infinite": "^1.2.2",
+    "@material-ui/core": "^1.2.0",
+    "@material-ui/icons": "^1.1.0",
+    "draggabilly": "^2.2.0",
+    "packery": "^2.1.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,6 +21,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.2"
+    "node-sass": "^4.9.0",
+    "redux-devtools-extension": "^2.13.2",
+    "sass-loader": "^7.0.3"
   }
 }
