--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "node-sass": "^4.9.0",
-    "redux-devtools-extension": "^2.13.2",
-    "sass-loader": "^7.0.3"
+    "redux-devtools-extension": "^2.13.2"
   }
 }
