--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,23 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/frontend/node_modules
+/backend/node_modules
 
 # testing
 /coverage
 
 # production
 /build
+/backend/config
+
+/config/mongo
+/frontend/config
+/frontend/scripts
 
 # misc
+.idea
+
 .DS_Store
 .env.local
 .env.development.local
